<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
            android:key="plugin_telephony"
            android:title="@string/pref_plugin_telephony"
            android:summary="@string/pref_plugin_telephony_desc"
            android:defaultValue="true" />

    <CheckBoxPreference
            android:key="plugin_battery"
            android:title="@string/pref_plugin_battery"
            android:summary="@string/pref_plugin_battery_desc"
            android:defaultValue="true" />

    <CheckBoxPreference
            android:key="plugin_clipboard"
            android:title="@string/pref_plugin_clipboard"
            android:summary="@string/pref_plugin_clipboard_desc"
            android:defaultValue="true" />

    <CheckBoxPreference
            android:key="plugin_mpris"
            android:title="@string/pref_plugin_mpris"
            android:summary="@string/pref_plugin_mpris_desc"
            android:defaultValue="true" />

    <CheckBoxPreference
            android:key="plugin_ping"
            android:title="@string/pref_plugin_ping"
            android:summary="@string/pref_plugin_ping_desc"
            android:defaultValue="true" />

</PreferenceScreen>